--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-discord.py
-CurrencyConverter
-currency-converter
-aiofiles
-asyncio
-aiosqlite
-youtube_dl
-yt_dlp
-pynacl
+discord.py>=2.3.2
+python-dotenv>=1.0.0
+yt-dlp>=2023.11.16
+PyNaCl>=1.5.0
+aiosqlite>=0.19.0
+asyncio>=3.4.3
+requests>=2.31.0
+beautifulsoup4>=4.12.2
+python-dateutil>=2.8.2
+pytz>=2023.3
+aiohttp>=3.9.1
+ffmpeg-python>=0.2.0
