--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,25 @@
-discord.py>=2.3.2
-python-dotenv>=1.0.0
-yt-dlp>=2023.11.16
-PyNaCl>=1.5.0
-aiosqlite>=0.19.0
-asyncio>=3.4.3
-requests>=2.31.0
-beautifulsoup4>=4.12.2
-python-dateutil>=2.8.2
-pytz>=2023.3
-aiohttp>=3.9.1
-ffmpeg-python>=0.2.0
+aiofiles==24.1.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+aiosqlite==0.21.0
+asyncio==3.4.3
+attrs==25.1.0
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+currency.converter==0.5.5
+CurrencyConverter==0.18.2
+discord.py==2.4.0
+frozenlist==1.5.0
+idna==3.10
+multidict==6.1.0
+propcache==0.2.1
+pycparser==2.22
+PyNaCl==1.5.0
+requests==2.32.3
+typing_extensions==4.12.2
+urllib3==2.3.0
+yarl==1.18.3
+youtube-dl==2021.12.17
+yt-dlp==2025.2.19
