--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,31 @@
 aiofiles==24.1.0
-aiohappyeyeballs==2.4.6
-aiohttp==3.11.12
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
 aiosignal==1.3.2
 aiosqlite==0.21.0
+async-timeout==5.0.1
 asyncio==3.4.3
-attrs==25.1.0
+attrs==25.3.0
+beautifulsoup4==4.13.3
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 currency.converter==0.5.5
-CurrencyConverter==0.18.2
-discord.py==2.4.0
+CurrencyConverter==0.18.4
+discord.py==2.5.2
+ffmpeg-python==0.2.0
 frozenlist==1.5.0
+future==1.0.0
 idna==3.10
-multidict==6.1.0
-propcache==0.2.1
+multidict==6.2.0
 pycparser==2.22
 PyNaCl==1.5.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.1
 requests==2.32.3
+six==1.17.0
+soupsieve==2.6
 typing_extensions==4.12.2
 urllib3==2.3.0
 yarl==1.18.3
